# admission-application-tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app-test.yml
app/: __init__.py  config.py  extensions.py
app/application/: admission_letter.py  models.py  views.py
app/authentication/: models.py  serializers.py  urls.py  validate.py  views.py
migrations/versions/: 6983058bf290_.py  6c282dd7dfa3_.py  c4b9ccfbfe44_.py
tests/: config.py  conftest.py  test_authentication.py  test_setup.py
