[project]
name = "applytrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pytest>=8.3.4",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
