[project]
name = "applytrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pytest>=8.3.4",
    "flask-login>=0.6.3",
    "flask-restx>=1.3.0",
    "pydantic[email]>=2.10.6",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "pylint>=3.3.4",
]
